<resources>
    <string name="app_name">Mobile programming practicals</string>
    <string name="button_back_label">Back</string>
    <string name="practical3_toolbar_title">Repository G-05</string>
    <string name="practical3_1_toolbar_title">Second Activity</string>
    <string name="practical4_toolbar_title">Calculator</string>
    <string name="practical2_1_toolbar_title">Map Reader</string>
    <string name="practical2_toolbar_title">Google Map</string>
    <string name="practical1_toolbar_title">Image</string>
    <string name="practical1_1_toolbar_title">Audio</string>
    <string name="main_toolbar_title">Mobile Programming I</string>
    <string name="practicals_label">Practicals</string>
    <string name="practical_1_button_label">Practical 1</string>
    <string name="practical_2_button_label">Practical 2</string>
    <string name="practical_3_button_label">Practical 3</string>
    <string name="practical_4_button_label">Practical 4</string>
    <string name="this_is_the_first_application_from_group_5_label">This is the first application from group 5</string>
    <string name="group_member_name_surname">Kārlis Griģis 1</string>
    <string name="the_application_was_developed_by_karlis_grigis_label">The application was developed by Kārlis Griģis</string>
    <string name="go_to_2_nd_activity_button_label">Go to 2-nd</string>
    <string name="theme_dialog_button_label">Dialog</string>
    <string name="save_to_preferences_button_label">Save</string>
    <string name="saved_text_goes_here_hint">Saved text goes here</string>
    <string name="read_preferences_button_label">Read Preferences</string>
    <string name="input_text_hint">Input here</string>
    <string name="reset_preferences_label">Reset preferences</string>
    <string name="error_label">Error</string>
    <string name="memory_save_label">MS</string>
    <string name="memory_read_label">MR</string>
    <string name="memory_clear_label">MC</string>
    <string name="full_clear_text_view_label">AC</string>
    <string name="delete_label">Delete</string>
    <string name="enter_label">Enter</string>
    <string name="divide_symbol">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply_symbol">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus_symbol">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus_symbol">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="percentage">%</string>
    <string name="checkbox_placeholder_1">Kārlis Griģis</string>
    <string name="checkbox_placeholder_2">Kārlis G.</string>
    <string name="checkbox_placeholder_3">K. Griģis</string>
    <string name="close_button_label">Close</string>
    <string name="ok_button_label">OK</string>
    <string name="dialog_title">5th Group\'s Dialog</string>
    <string name="practical_1_label">Practical 1</string>
    <string name="you_clicked_ok_text">You clicked OK!</string>
    <string name="you_clicked_close_text">You clicked Close!</string>
    <string name="checked_label">%1$s checked</string>
    <string name="unchecked_label">%1$s unchecked</string>
    <string name="default_label">Default</string>
    <string name="myprefs_label">MyPrefs</string>
    <string name="inputtext_editor_label">inputText</string>
    <string name="saved_text_retrieved_successfully_text">Saved text retrieved successfully!</string>
    <string name="no_text_found_text">No text found</string>
    <string name="text_saved_text">Text saved</string>
    <string name="text_read_text">Text read</string>
    <string name="text_deleted_text">Text deleted</string>
    <string name="savedvalue_editor_label">savedValue</string>
    <string name="dark_theme_label">Dark Theme</string>
    <string name="light_theme_label">Light Theme</string>
    <string name="input_text_with_colon">Input text:</string>
    <string name="preferences_reset_textt">Preferences reset!</string>
    <string name="stored_text_text">"Stored text: "</string>
    <string name="practical1_take_picture">Take picture</string>
    <string name="menu_back_to_image">Image</string>
    <string name="menu_delete_audio">Delete</string>
    <string name="menu_show_images">Show Images</string>
    <string name="menu_go_to_audio">Audio</string>
    <string name="menu_delete_images">Delete</string>
    <string name="image_description">Image description</string>
    <string name="audio_record">Record</string>
    <string name="record_name">Record %1$d</string>
    <string name="record_date">%1$s</string>
    <string name="menu_go_to_map_reader">Reader</string>
    <string name="menu_go_back_to_maps">Map</string>
    <string name="microphone_icon">microphone icon</string>
    <string name="audio_record_1">Record 1</string>
    <string name="audio_record_date">12/02/2025 14:30</string>
    <string name="api_data_date">April 1st, 2024</string>
    <string name="api_data_name">Data 01</string>
    <string name="folder_icon_image_description">folder icon</string>
    <string name="google_maps_api_key">AIzaSyCh9LvteHVjyCfiYsWeanBmoCDlNu8wAAs</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="open_audio_activity">Open_Audio_Activity</string>
    <string name="no_images_to_show">No images to show</string>
    <string name="show_images">Show_Images</string>
    <string name="delete_images">Delete_Images</string>
    <string name="picture_taken">Picture_Taken</string>
    <string name="record_audio">Record_Audio</string>
    <string name="start_recording">Start Recording</string>
    <string name="audio_recorded">Audio_Recorded</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="recording_started">Recording_Started</string>
    <string name="delete_audio">Delete_Audio</string>
    <string name="audio_played">Audio_Played</string>
    <string name="unknown_recording">Unknown Recording</string>
    <string name="open_image_activity">Open_Image_Activity</string>
    <string name="valmieras_baznica">Valmieras Svētā Sīmaņa evaņgēliski luteriskā baznīca</string>
    <string name="my_location">My Location</string>
    <string name="practical2_1">Practical2_1</string>
    <string name="oncreate_called">onCreate called</string>
    <string name="https_jsonplaceholder_typicode_com_posts">https://jsonplaceholder.typicode.com/posts</string>
</resources>