<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    android:orientation="vertical"
    android:padding="16dp">

    <include
        android:id="@+id/tb_practical2_first_activity"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_show_result_process"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/green"
        android:gravity="end"
        android:padding="25dp"
        android:text="0"
        android:textColor="@color/white"

        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="@color/green"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_percent="0.9">

        <!-- Buttons for digits, operations, and memory functions -->
        <Button
            android:layout_width="75dp"
            android:onClick="onMemorySave"
            android:text="@string/memory_save_label"
            android:theme="@style/calculatorUniqueButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:onClick="onMemoryRead"
            android:text="@string/memory_read_label"
            android:theme="@style/calculatorUniqueButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:onClick="onMemoryClear"
            android:text="@string/memory_clear_label"
            android:theme="@style/calculatorUniqueButtonViewStyle" />

        <Button
            android:backgroundTint="@color/black2"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:layout_width="75dp"
            android:onClick="onFullDeleteClick"
            android:text="@string/full_clear_text_view_label"
            android:theme="@style/calculatorOperatorButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onLastDeleteClick"
            android:text="@string/delete_label"
            android:theme="@style/calculatorOperatorButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:onClick="onEnterClick"
            android:text="@string/enter_label"
            android:theme="@style/calculatorOperatorButtonViewStyle" />

        <Button
            android:onClick="onOperatorClick"
            android:text="@string/divide_symbol"
            android:textStyle="bold"
            android:theme="@style/calculatorOperatorButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/seven"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/eight"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/nine"
            android:theme="@style/calculatorDigitButtonViewStyle" />


        <Button
            android:onClick="onOperatorClick"
            android:text="@string/multiply_symbol"
            android:theme="@style/calculatorOperatorButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/four"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/five"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/six"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:onClick="onOperatorClick"
            android:text="@string/minus_symbol"
            android:theme="@style/calculatorOperatorButtonViewStyle" />


        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/one"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/two"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/three"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:onClick="onOperatorClick"
            android:text="@string/plus_symbol"
            android:theme="@style/calculatorOperatorButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:backgroundTint="@color/black2"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onDigitClick"
            android:text="@string/zero"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:layout_width="75dp"
            android:gravity="center"
            android:onClick="onOperatorClick"
            android:text="@string/dot"
            android:theme="@style/calculatorDigitButtonViewStyle" />

        <Button
            android:layout_width="90dp"
            android:onClick="onOperatorClick"
            android:text="@string/percentage"
            android:theme="@style/calculatorOperatorButtonViewStyle" />


        <!-- Memory buttons -->


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
