<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/dialog_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:dividerColor="@color/green" />

    <CheckBox
        android:id="@+id/cb_member_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/checkbox_placeholder_1"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:theme="@style/checkBoxStyle" />

    <CheckBox
        android:id="@+id/cb_member_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/checkbox_placeholder_2"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:theme="@style/checkBoxStyle" />

    <CheckBox
        android:id="@+id/cb_member_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/checkbox_placeholder_3"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:theme="@style/checkBoxStyle" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/bt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:text="@string/close_button_label"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/purple_200"
            android:text="@string/ok_button_label"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
