<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tb_start"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/practicals_label"
        android:theme="@style/mainLabelTextViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_start" />

    <Button
        android:id="@+id/bt_practical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/practical_1_button_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bt_practical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practical_2_button_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_practical_1" />

    <Button
        android:id="@+id/bt_practical_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practical_3_button_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_practical_2" />

    <Button
        android:id="@+id/bt_practical_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practical_4_button_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_practical_3" />


</androidx.constraintlayout.widget.ConstraintLayout>