<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tb_practical3_main_activity"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_input_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/input_text_hint"
        android:theme="@style/ThemeEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_practical3_main_activity" />

    <Button
        android:id="@+id/bt_save_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_to_preferences_button_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input_text" />

    <Button
        android:id="@+id/bt_go_to_next_activity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/go_to_2_nd_activity_button_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_save_text" />

    <Spinner
        android:id="@+id/sp_themes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_go_to_next_activity" />

    <Button
        android:id="@+id/bt_reset_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_preferences_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_practical3_main_activity" />


</androidx.constraintlayout.widget.ConstraintLayout>