<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tb_practical3_second_activity"
        layout="@layout/toolbar"
        android:theme="@style/regularTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_preference_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:hint="@string/saved_text_goes_here_hint"
        android:background="@drawable/border"
        android:theme="@style/regularTextViewStyle"
        app:layout_constraintBottom_toTopOf="@+id/bt_read_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_practical3_second_activity" />

    <Button
        android:id="@+id/bt_read_preferences"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/read_preferences_button_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_practical3_second_activity" />

    <Button
        android:id="@+id/bt_go_back"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_back_label"
        android:theme="@style/buttonViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_read_preferences" />


</androidx.constraintlayout.widget.ConstraintLayout>